# work_venv

work_poetry/: pyproject.toml
work_poetry/tests/: test_work_poetry.py
